--- a/css/font.css
+++ b/css/font.css
@@ -3,3 +3,7 @@
     src: url(https://parloti.github.io/tickebook.com/font/bpg_nino_mtavruli_bold.eot);
     src: url(https://parloti.github.io/tickebook.com/font/bpg_nino_mtavruli_bold.eot) format('embedded-opentype'), url(https://parloti.github.io/tickebook.com/font/bpg_nino_mtavruli_bold.woff2) format('woff2'), url(https://parloti.github.io/tickebook.com/font/bpg_nino_mtavruli_bold.woff) format('woff'), url(https://parloti.github.io/tickebook.com/font/bpg_nino_mtavruli_bold.ttf) format('truetype'), url(https://parloti.github.io/tickebook.com/font/bpg_nino_mtavruli_bold.svg#bpg_nino_mtavruli_bold) format('svg')
 }
+
+a, abbr, acronym, address, applet, big, blockquote, body, caption, cite, code, dd, del, dfn, div, dl, dt, em, fieldset, font, form, h1, h2, h3, h4, h5, h6, html, iframe, ins, kbd, label, legend, li, object, ol, p, pre, q, s, samp, small, span, strike, strong, sub, sup, table, tbody, td, tfoot, th, thead, tr, tt, ul, var {
+    font-family: avia;
+}
