--- a/css/background.css
+++ b/css/background.css
@@ -4,7 +4,7 @@
     top: 0;
     left: 0;
     z-index: -52;
-    width: 100vw;
+    width: 1180px;
     height: 100vh;
 }
 
@@ -26,6 +26,6 @@
     height: 100%;
     background-position: center bottom;
     position: relative;
-    top: -100vh;
+    top: -100%;
     background-color: #0bb8dc !important;
 }
